translation handling (wip) + adjustments to mana / experience handling (untested) * mana ability was not considered if no exp requirement was enabled * the check for max. mana used no exp requirement instead of the consumes experience config + changes to some ability related class handling (untested) + changed cave dragon update handling * don't sync air supply and time in rain - both sides should properly keep track of it since the modifications are deterministic * mark cave dragon as immune (through entity mixin) instead of manually clearing the fire ourselves